--- a/index.html
+++ b/index.html
@@ -328,6 +328,17 @@
             <!-- Items Modal -->
             <div id="items-modal-wrapper" class="modal-wrapper hidden absolute inset-0 z-50">
                 <div class="h-full w-full bg-gradient-to-b from-amber-600 to-amber-800 flex flex-col">
+                    <!-- Item Info Area -->
+                    <div class="h-1/2 w-full flex flex-col items-center justify-center text-center text-white p-4 relative">
+                        <div class="flex items-center justify-center gap-2 mb-2">
+                            <h3 id="item-title" class="text-xl font-bold text-shadow-lg"></h3>
+                            <span id="item-owned" class="bg-blue-900 text-white text-xs font-bold px-2 py-1 rounded-md">x0</span>
+                        </div>
+                        <p id="item-description" class="text-sm"></p>
+                        <button id="buy-item-btn" class="absolute top-4 right-4 bg-green-500 text-white font-bold w-auto h-12 px-3 flex items-center justify-center gap-1 rounded-md border border-black shadow-[4px_4px_0px_#000] active:shadow-none active:translate-x-1 active:translate-y-1 transition-all text-lg">
+                            <!-- Content is now set by JS -->
+                        </button>
+                    </div>
                     <!-- Carousel Area -->
                     <div id="shop-carousel" class="shop-carousel h-1/2 w-full flex items-center overflow-x-auto scrollbar-hide cursor-grab active:cursor-grabbing">
                         <div class="flex space-x-4 px-[calc(50%-3.5rem)]"> <!-- Padding to center items -->
@@ -339,17 +350,6 @@
                             <div class="shop-item flex-shrink-0 w-28 h-28 rounded-lg flex items-center justify-center text-5xl select-none transition-transform duration-200" data-index="5">♾️</div>
                         </div>
                     </div>
-                    <!-- Item Info Area -->
-                    <div class="h-1/2 w-full flex flex-col items-center justify-center text-center text-white p-4 relative">
-                        <div class="flex items-center justify-center gap-2 mb-2">
-                            <h3 id="item-title" class="text-xl font-bold text-shadow-lg"></h3>
-                            <span id="item-owned" class="bg-blue-900 text-white text-xs font-bold px-2 py-1 rounded-md">x0</span>
-                        </div>
-                        <p id="item-description" class="text-sm"></p>
-                        <button id="buy-item-btn" class="absolute bottom-4 right-4 bg-green-500 text-white font-bold w-auto h-12 px-3 flex items-center justify-center gap-1 rounded-md border border-black shadow-[4px_4px_0px_#000] active:shadow-none active:translate-x-1 active:translate-y-1 transition-all text-lg">
-                            <!-- Content is now set by JS -->
-                        </button>
-                    </div>
                 </div>
                 <button class="close-modal-btn absolute left-1/2 -translate-x-1/2 -top-20 w-14 h-14 bg-gray-900 text-white text-3xl font-bold rounded-full border-4 border-gray-600 flex items-center justify-center active:bg-gray-800 transition-colors">&times;</button>
             </div>
@@ -357,6 +357,17 @@
             <!-- Map Modal -->
             <div id="map-modal-wrapper" class="modal-wrapper hidden absolute inset-0 z-50">
                 <div class="h-full w-full bg-gradient-to-b from-indigo-700 to-indigo-900 flex flex-col">
+                     <!-- Item Info Area -->
+                    <div class="h-1/2 w-full flex flex-col items-center justify-center text-center text-white p-4 relative">
+                        <div class="flex items-center justify-center gap-2 mb-2">
+                            <h3 id="map-item-title" class="text-xl font-bold text-shadow-lg"></h3>
+                            <span id="map-item-owned" class="bg-blue-900 text-white text-xs font-bold px-2 py-1 rounded-md">x0</span>
+                        </div>
+                        <p id="map-item-description" class="text-sm"></p>
+                        <button id="buy-map-item-btn" class="absolute top-4 right-4 bg-gray-800 text-white font-bold w-12 h-12 flex items-center justify-center rounded-md border border-black shadow-[4px_4px_0px_#000] active:shadow-none active:translate-x-1 active:translate-y-1 transition-all text-lg">
+                            1🌙
+                        </button>
+                    </div>
                     <!-- Carousel Area -->
                     <div id="map-carousel" class="shop-carousel h-1/2 w-full flex items-center overflow-x-auto scrollbar-hide cursor-grab active:cursor-grabbing">
                         <div class="flex space-x-4 px-[calc(50%-3.5rem)]"> <!-- Padding to center items -->
@@ -367,17 +378,6 @@
                             <div class="shop-item map-item flex-shrink-0 w-28 h-28 rounded-lg flex items-center justify-center text-5xl select-none transition-transform duration-200" data-index="4">🌟</div>
                             <div class="shop-item map-item flex-shrink-0 w-28 h-28 rounded-lg flex items-center justify-center text-5xl select-none transition-transform duration-200" data-index="5">⚡</div>
                         </div>
-                    </div>
-                    <!-- Item Info Area -->
-                    <div class="h-1/2 w-full flex flex-col items-center justify-center text-center text-white p-4 relative">
-                        <div class="flex items-center justify-center gap-2 mb-2">
-                            <h3 id="map-item-title" class="text-xl font-bold text-shadow-lg"></h3>
-                            <span id="map-item-owned" class="bg-blue-900 text-white text-xs font-bold px-2 py-1 rounded-md">x0</span>
-                        </div>
-                        <p id="map-item-description" class="text-sm"></p>
-                        <button id="buy-map-item-btn" class="absolute bottom-4 right-4 bg-gray-800 text-white font-bold w-12 h-12 flex items-center justify-center rounded-md border border-black shadow-[4px_4px_0px_#000] active:shadow-none active:translate-x-1 active:translate-y-1 transition-all text-lg">
-                            1🌙
-                        </button>
                     </div>
                 </div>
                 <button class="close-modal-btn absolute left-1/2 -translate-x-1/2 -top-20 w-14 h-14 bg-gray-900 text-white text-3xl font-bold rounded-full border-4 border-gray-600 flex items-center justify-center active:bg-gray-800 transition-colors">&times;</button>
@@ -403,7 +403,17 @@
 
             <!-- Spells Modal -->
             <div id="quests-modal-wrapper" class="modal-wrapper hidden absolute inset-0 z-50">
-                <div class="h-full w-full bg-gradient-to-b from-pink-400 to-pink-600 p-4 text-white flex flex-col justify-center">
+                <div class="h-full w-full bg-gradient-to-b from-pink-400 to-pink-600 p-4 text-white flex flex-col justify-around">
+                    <!-- Magic Meter -->
+                    <div class="flex items-center gap-2 px-4">
+                        <span class="text-2xl w-10 text-center">✨</span>
+                        <div class="relative w-full bg-black rounded-full h-5 border-2 border-purple-900">
+                            <div class="bg-gradient-to-r from-purple-500 to-indigo-500 h-full rounded-full" style="width: 100%"></div>
+                            <div class="absolute inset-0 flex items-center justify-center">
+                                <span class="text-xs font-bold text-white">10/10</span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="flex justify-around items-start text-center">
                         <!-- Spell 1: Flameheart -->
                         <button class="w-1/3 flex flex-col items-center gap-1 transition-transform active:scale-95">
@@ -476,6 +486,17 @@
                 </div>
                 <button class="close-modal-btn absolute left-1/2 -translate-x-1/2 -top-20 w-14 h-14 bg-gray-900 text-white text-3xl font-bold rounded-full border-4 border-gray-600 flex items-center justify-center active:bg-gray-800 transition-colors">&times;</button>
             </div>
+
+            
+        </div>
+
+        <!-- Tutorial Modal -->
+        <div id="tutorial-modal-wrapper" class="modal-wrapper hidden absolute inset-0 z-[60] p-4">
+            <div class="h-full w-full bg-gradient-to-b from-blue-800 to-indigo-900 rounded-lg border-4 border-blue-600 flex flex-col items-center justify-center text-white relative">
+                <h2 class="text-3xl font-bold mb-4" style="text-shadow: 2px 2px 0 #000;">How to Play</h2>
+                <!-- Tutorial content will go here -->
+                 <button id="tutorial-close-btn" class="absolute top-4 right-4 text-white text-4xl font-bold transition-colors" style="text-shadow: 2px 2px 4px #000;">&times;</button>
+            </div>
         </div>
 
         <!-- Character Modal (Previously World Map) -->
@@ -484,16 +505,6 @@
                 <!-- UPDATED: Character section with stats -->
                 <div class="h-1/2 w-full bg-gradient-to-b from-gray-900 to-green-900 p-4 relative flex flex-col justify-center">
                     <div class="space-y-4 text-lg">
-                        <!-- Magic Meter -->
-                        <div class="flex items-center gap-2">
-                            <span class="font-bold text-purple-400 w-28">Magic:</span>
-                            <div class="relative w-full bg-black rounded-full h-5 border-2 border-purple-900">
-                                <div class="bg-gradient-to-r from-purple-500 to-indigo-500 h-full rounded-full" style="width: 75%"></div>
-                                <div class="absolute inset-0 flex items-center justify-center">
-                                    <span class="text-xs font-bold text-white">75/100</span>
-                                </div>
-                            </div>
-                        </div>
                         <!-- Luck Stat -->
                         <div class="flex items-center gap-2">
                             <span class="font-bold text-emerald-400 w-28">Luck:</span>
@@ -501,21 +512,21 @@
                         </div>
                         <!-- Record Wave -->
                         <div class="flex items-center gap-2">
-                            <span class="font-bold text-amber-400 w-28">Wave Record:</span>
-                            <span class="font-bold">🌊 24</span>
+                            <span class="font-bold text-teal-400 w-28">Wave Record:</span>
+                            <span class="font-bold">0</span>
                         </div>
                         <!-- Unlocks -->
                         <div class="flex items-center gap-2">
                             <span class="font-bold text-cyan-400 w-28">Unlocks:</span>
                             <div class="flex gap-2 text-2xl">
-                                <span>🏆</span>
-                                <span>🗝️</span>
-                                <span class="opacity-30">❓</span>
-                                <span class="opacity-30">❓</span>
+                                <span>❓</span>
+                                <span>❓</span>
+                                <span>❓</span>
+                                <span>❓</span>
                             </div>
                         </div>
                     </div>
-                    <button class="absolute bottom-4 right-4 text-3xl bg-gray-700 hover:bg-gray-600 text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg border-2 border-gray-500 transition-transform active:scale-95">❔</button>
+                    <button id="tutorial-open-btn" class="absolute bottom-4 right-4 text-3xl bg-gray-700 hover:bg-gray-600 text-white w-12 h-12 rounded-full flex items-center justify-center shadow-lg border-2 border-gray-500 transition-transform active:scale-95">❔</button>
                 </div>
                  <div class="h-1/2 w-full bg-gradient-to-b from-gray-900 to-purple-900 flex flex-col justify-center items-center text-center p-4">
                     <h3 class="text-xl font-bold mb-4 text-purple-300" style="text-shadow: 2px 2px 0 #000;">Collected Fortunes</h3>
@@ -1411,6 +1422,23 @@
                 },0);
             });
 
+            // TUTORIAL MODAL LOGIC
+            const tutorialOpenBtn = document.getElementById('tutorial-open-btn');
+            const tutorialModal = document.getElementById('tutorial-modal-wrapper');
+            const tutorialCloseBtn = document.getElementById('tutorial-close-btn');
+
+            if (tutorialOpenBtn && tutorialModal && tutorialCloseBtn) {
+                tutorialOpenBtn.addEventListener('click', (e) => {
+                    e.stopPropagation();
+                    tutorialModal.classList.remove('hidden');
+                });
+
+                tutorialCloseBtn.addEventListener('click', (e) => {
+                    e.stopPropagation();
+                    tutorialModal.classList.add('hidden');
+                });
+            }
+
             // Initialize views on load
             updatePlayerUI();
             updateCollectedFortunesDisplay();
@@ -1419,8 +1447,6 @@
     </script>
 </body>
 </html>
-
-
 
 
 
