--- a/index.html
+++ b/index.html
@@ -149,6 +149,49 @@
         .final-reward-pop {
             animation: final-reward-pop 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
         }
+
+        /* CRT Filter Effect */
+        .crt-filter {
+            position: relative;
+            overflow: hidden;
+        }
+        .crt-filter::after {
+            content: ' ';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+            z-index: 2;
+            background-size: 100% 4px, 3px 100%;
+            pointer-events: none;
+            animation: flicker 0.15s infinite;
+        }
+        .crt-filter::before {
+            content: ' ';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
+            z-index: 2;
+            pointer-events: none;
+        }
+        @keyframes flicker {
+          0% { opacity: 0.2; }
+          20% { opacity: 0.8; }
+          40% { opacity: 0.3; }
+          60% { opacity: 0.9; }
+          80% { opacity: 0.25; }
+          100% { opacity: 0.5; }
+        }
+        #slot-machine {
+            z-index: 3;
+        }
     </style>
 </head>
 <body class="bg-gray-900 flex items-center justify-center min-h-screen transition-all">
@@ -205,7 +248,7 @@
         </div>
 
         <!-- Game Screen Area (Central Area) -->
-        <div class="flex-grow bg-gray-900 flex flex-col p-4 relative">
+        <div class="flex-grow bg-gray-900 flex flex-col p-4 relative crt-filter">
             <!-- Top half for slot machine -->
             <div class="h-1/2 flex items-center justify-center">
                 <!-- Slot Machine -->
@@ -1447,6 +1490,7 @@
     </script>
 </body>
 </html>
+
 
 
 
