--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             text-shadow: 2px 2px 0 #000;
             pointer-events: none; /* So it doesn't interfere with clicks */
             animation: float-up 0.5s ease-out forwards;
+            z-index: 10;
         }
 
         /* ADDED: Enemy attack zoom animation */
@@ -151,11 +152,16 @@
         }
 
         /* CRT Filter Effect */
-        .crt-filter {
-            position: relative;
-            overflow: hidden;
+        .crt-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            pointer-events: none;
+            z-index: 1;
         }
-        .crt-filter::after {
+        .crt-overlay::after {
             content: ' ';
             display: block;
             position: absolute;
@@ -164,12 +170,10 @@
             bottom: 0;
             right: 0;
             background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-            z-index: 2;
             background-size: 100% 4px, 3px 100%;
-            pointer-events: none;
             animation: flicker 0.15s infinite;
         }
-        .crt-filter::before {
+        .crt-overlay::before {
             content: ' ';
             display: block;
             position: absolute;
@@ -178,8 +182,6 @@
             bottom: 0;
             right: 0;
             background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
-            z-index: 2;
-            pointer-events: none;
         }
         @keyframes flicker {
           0% { opacity: 0.2; }
@@ -188,9 +190,6 @@
           60% { opacity: 0.9; }
           80% { opacity: 0.25; }
           100% { opacity: 0.5; }
-        }
-        #slot-machine {
-            z-index: 3;
         }
     </style>
 </head>
@@ -248,7 +247,8 @@
         </div>
 
         <!-- Game Screen Area (Central Area) -->
-        <div class="flex-grow bg-gray-900 flex flex-col p-4 relative crt-filter">
+        <div class="flex-grow bg-gray-900 flex flex-col p-4 relative">
+            <div class="crt-overlay"></div>
             <!-- Top half for slot machine -->
             <div class="h-1/2 flex items-center justify-center">
                 <!-- Slot Machine -->
@@ -1490,6 +1490,7 @@
     </script>
 </body>
 </html>
+
 
 
 
