--- a/index.html
+++ b/index.html
@@ -150,12 +150,40 @@
         .armor-gain {
             animation: armor-gain 0.4s ease-in-out;
         }
+
+        /* Vibe - Retro CRT Effect */
+        #game-container::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background:
+                linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
+                linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+            background-size: 100% 3px, 3px 100%;
+            pointer-events: none;
+            z-index: 100;
+        }
+
+        #game-container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            box-shadow: inset 0 0 80px rgba(0,0,0,0.7);
+            pointer-events: none;
+            z-index: 101;
+        }
     </style>
 </head>
 <body class="bg-gray-900 flex items-center justify-center min-h-screen transition-all">
 
     <!-- Mobile Phone Silhouette -->
-    <div class="w-full max-w-sm h-[90vh] max-h-[800px] bg-black border-4 border-gray-700 rounded-3xl shadow-2xl flex flex-col overflow-hidden relative">
+    <div id="game-container" class="w-full max-w-sm h-[90vh] max-h-[800px] bg-black border-4 border-gray-700 rounded-3xl shadow-2xl flex flex-col overflow-hidden relative">
         
         <!-- Top Status Bar -->
         <div id="top-status-bar" class="bg-gray-800 p-4 border-b-4 border-gray-700 flex flex-col justify-center gap-3 text-white">
@@ -2355,4 +2383,5 @@
     </script>
 </body>
 </html>
+
 
