--- a/index.html
+++ b/index.html
@@ -161,18 +161,32 @@
         .armor-gain {
             animation: armor-gain 0.4s ease-in-out;
         }
+
+        /* ADDED: Funky animated background for enemy reels */
+        @keyframes pan-bg {
+          from { background-position: 0% 0%; }
+          to { background-position: 100% 100%; }
+        }
+
+        .fun-reel-bg {
+            background-color: #000000; /* black */
+            /* UPDATED: A subtle, bubbly SVG pattern with multiple colors */
+            background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='5' cy='5' r='2' fill='white' fill-opacity='0.5'/%3E%3Ccircle cx='15' cy='25' r='1' fill='%23fde047' fill-opacity='0.5'/%3E%3Ccircle cx='30' cy='10' r='2' fill='%23ef4444' fill-opacity='0.5'/%3E%3Ccircle cx='25' cy='35' r='1.5' fill='white' fill-opacity='0.5'/%3E%3C/svg%3E");
+            background-size: 40px 40px; /* Make the pattern larger */
+            animation: pan-bg 20s linear infinite; /* Speed up the animation */
+        }
     </style>
 </head>
 <!-- UPDATED: Background changed to a cool, dark slate for a modern look -->
-<body class="bg-slate-900 flex items-center justify-center min-h-screen transition-all">
+<body class="bg-black flex items-center justify-center min-h-screen transition-all">
 
     <!-- Mobile Phone Silhouette -->
     <!-- UPDATED: Colors refreshed to match the new slate theme -->
-    <div class="w-full max-w-sm h-[90vh] max-h-[800px] bg-slate-950 border-2 border-slate-800 rounded-[2.5rem] shadow-2xl shadow-black/50 flex flex-col overflow-hidden relative">
+    <div class="w-full max-w-sm h-[90vh] max-h-[800px] bg-black border-2 border-slate-800 rounded-[2.5rem] shadow-2xl shadow-black/50 flex flex-col overflow-hidden relative">
         
         <!-- Top Status Bar -->
         <!-- UPDATED: Background swapped from solid color to a subtle gradient for depth -->
-        <div id="top-status-bar" class="p-4 border-b-2 border-slate-800 flex flex-col justify-center gap-3 text-white backdrop-blur-sm z-10 bg-gradient-to-b from-slate-900/80 to-indigo-950/80">
+        <div id="top-status-bar" class="p-4 border-b-2 border-slate-800 flex flex-col justify-center gap-3 text-white backdrop-blur-sm z-10 bg-gradient-to-b from-black/80 to-indigo-950/80">
             <!-- Counters -->
             <div class="grid grid-cols-4 gap-x-2 text-center items-center">
                 <div id="player-armor-container" class="flex items-center justify-center gap-1.5">
@@ -223,7 +237,7 @@
 
         <!-- Game Screen Area (Central Area) -->
         <!-- UPDATED: Background changed to a radial gradient for a "spotlight" effect -->
-        <div class="flex-grow flex flex-col p-4 relative bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800 to-slate-900">
+        <div class="flex-grow flex flex-col p-4 relative bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800 to-black">
             <!-- Top half for slot machine -->
             <div class="h-1/2 flex items-center justify-center">
                 <!-- Slot Machine -->
@@ -236,8 +250,8 @@
                             <span class="enemy-status enemy-1-status-sluggish text-xs" style="display: none;">🐌</span>
                             <span class="enemy-status enemy-1-status-regen text-xs" style="display: none;">❇️</span>
                         </div>
-                        <!-- UPDATED: Refreshed reel styling for a polished, inset look -->
-                        <button id="reel1" class="relative reel text-6xl p-4 bg-gradient-to-b from-slate-800 to-slate-900 border-2 border-slate-700 shadow-inner shadow-black/50 rounded-xl w-24 h-24 flex items-center justify-center transition-all duration-150 transform active:scale-95 hover:border-violet-500" disabled>
+                        <!-- UPDATED: Refreshed reel styling with a fun, animated background -->
+                        <button id="reel1" class="relative reel text-6xl p-4 border-2 border-slate-700 rounded-xl w-24 h-24 flex items-center justify-center transition-all duration-150 transform active:scale-95 hover:border-violet-500 fun-reel-bg" disabled>
                             <span class="reel-content">❔</span>
                             <!-- UPDATED: Brighter attack badge -->
                             <div class="attack-value absolute top-1 left-1 bg-rose-500 text-white text-xs font-bold px-1.5 py-0.5 rounded-md hidden">💥1</div>
@@ -251,7 +265,7 @@
                             <span class="enemy-status enemy-2-status-sluggish text-xs" style="display: none;">🐌</span>
                             <span class="enemy-status enemy-2-status-regen text-xs" style="display: none;">❇️</span>
                         </div>
-                        <button id="reel2" class="relative reel text-6xl p-4 bg-gradient-to-b from-slate-800 to-slate-900 border-2 border-slate-700 shadow-inner shadow-black/50 rounded-xl w-24 h-24 flex items-center justify-center transition-all duration-150 transform active:scale-95 hover:border-violet-500" disabled>
+                        <button id="reel2" class="relative reel text-6xl p-4 border-2 border-slate-700 rounded-xl w-24 h-24 flex items-center justify-center transition-all duration-150 transform active:scale-95 hover:border-violet-500 fun-reel-bg" disabled>
                             <span class="reel-content">❔</span>
                             <div class="attack-value absolute top-1 left-1 bg-rose-500 text-white text-xs font-bold px-1.5 py-0.5 rounded-md hidden">💥1</div>
                         </button>
@@ -264,7 +278,7 @@
                             <span class="enemy-status enemy-3-status-sluggish text-xs" style="display: none;">🐌</span>
                             <span class="enemy-status enemy-3-status-regen text-xs" style="display: none;">❇️</span>
                         </div>
-                        <button id="reel3" class="relative reel text-6xl p-4 bg-gradient-to-b from-slate-800 to-slate-900 border-2 border-slate-700 shadow-inner shadow-black/50 rounded-xl w-24 h-24 flex items-center justify-center transition-all duration-150 transform active:scale-95 hover:border-violet-500" disabled>
+                        <button id="reel3" class="relative reel text-6xl p-4 border-2 border-slate-700 rounded-xl w-24 h-24 flex items-center justify-center transition-all duration-150 transform active:scale-95 hover:border-violet-500 fun-reel-bg" disabled>
                             <span class="reel-content">❔</span>
                             <div class="attack-value absolute top-1 left-1 bg-rose-500 text-white text-xs font-bold px-1.5 py-0.5 rounded-md hidden">💥1</div>
                         </button>
@@ -335,7 +349,7 @@
 
         <!-- Controls Area -->
         <!-- UPDATED: Background swapped from solid to a gradient that matches the top bar -->
-        <div id="controls-area" class="h-[35%] border-t-2 border-slate-800 relative bg-gradient-to-t from-slate-900 to-indigo-950">
+        <div id="controls-area" class="h-[35%] border-t-2 border-slate-800 relative bg-gradient-to-t from-black to-indigo-950">
             <!-- Button Grid Container -->
             <div id="button-grid" class="p-6 h-full">
                 <div class="grid grid-cols-3 grid-rows-2 gap-4 h-full items-center">
@@ -2397,4 +2411,7 @@
     </script>
 </body>
 </html>
+
+
+
 
