--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         
         <!-- Top Status Bar -->
         <!-- UPDATED: Background swapped from solid color to a subtle gradient for depth -->
-        <div id="top-status-bar" class="p-4 border-b-2 border-slate-800 flex flex-col justify-center gap-3 text-white backdrop-blur-sm z-10 bg-gradient-to-b from-black/80 to-indigo-950/80">
+        <div id="top-status-bar" class="relative p-4 border-b-2 border-slate-800 flex flex-col justify-center gap-3 text-white backdrop-blur-sm z-10 bg-gradient-to-b from-black/80 to-indigo-950/80">
             <!-- Counters -->
             <div class="grid grid-cols-4 gap-x-2 text-center items-center">
                 <div id="player-armor-container" class="flex items-center justify-center gap-1.5">
@@ -2444,6 +2444,8 @@
     </script>
 </body>
 </html>
+
+
 
 
 
