--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </header>
 
         <!-- Middle Section -->
-        <main class="flex-grow bg-gray-700 p-6 flex flex-col justify-around">
+        <main class="flex-grow bg-gray-700 p-4 sm:p-6 flex flex-col justify-around">
             <!-- Market Summary -->
             <div>
                 <h3 class="font-anton text-2xl tracking-wider text-indigo-300 mb-3 text-center">MARKET ITEMS</h3>
@@ -311,23 +311,23 @@
                     <div class="space-y-3">
                          <!-- Sell Row -->
                         <div class="flex items-center">
-                            <h4 class="font-anton text-xl text-red-400 mr-4 w-14 text-right">SELL</h4>
+                            <h4 class="font-anton text-lg text-red-400 mr-2 w-12 text-right">SELL</h4>
                             <div id="sell-summary" class="flex flex-row space-x-2">
                                 <!-- Populated by JS -->
                             </div>
                         </div>
                         <!-- Keep Row -->
                         <div class="flex items-center">
-                            <h4 class="font-anton text-xl text-green-400 mr-4 w-14 text-right">KEEP</h4>
+                            <h4 class="font-anton text-lg text-green-400 mr-2 w-12 text-right">KEEP</h4>
                             <div id="keep-summary" class="flex flex-row space-x-2">
                                <!-- Populated by JS -->
                             </div>
                         </div>
                     </div>
                     <!-- Gamble Summary -->
-                    <div class="text-center pr-4">
-                        <h4 class="font-anton text-xl text-yellow-300 mb-1">WINNINGS</h4>
-                        <div id="gamble-summary" class="font-anton text-5xl text-yellow-300">
+                    <div class="text-center">
+                        <h4 class="font-anton text-lg text-yellow-300">WINNINGS</h4>
+                        <div id="gamble-summary" class="font-anton text-4xl text-yellow-300">
                             $0
                         </div>
                     </div>
