--- a/index.html
+++ b/index.html
@@ -184,6 +184,31 @@
             to { bottom: 100%; }    /* End just above the screen */
         }
 
+        /* Styles for Choice Graph */
+        .path-line {
+            stroke: #6b7280; /* gray-500 */
+            stroke-width: 4;
+        }
+        .node {
+            fill: #4b5563; /* gray-600 */
+            stroke: #9ca3af; /* gray-400 */
+            stroke-width: 3;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+        .node:hover, .node.active {
+            fill: #facc15; /* yellow-400 */
+            stroke: #fff;
+            transform: scale(1.1);
+            transform-origin: center;
+        }
+        .node.start {
+            fill: #10b981; /* emerald-500 */
+        }
+        .node.end {
+            fill: #ef4444; /* red-500 */
+        }
+
     </style>
 </head>
 <body class="font-sans">
@@ -455,7 +480,7 @@
                     <span class="font-bold text-teal-500 text-left">Magic</span><span class="text-right" id="magic-stat-value">2</span>
 
                     <span class="font-bold text-white text-left">Grace</span><span class="text-right" id="grace-stat-value">0</span>
-                    <span class="font-bold text-red-800 text-left">Fear</span><span class="text-right" id="fear-stat-value">0</span>
+                    <span class="font-bold text-gray-500 text-left">Fear</span><span class="text-right" id="fear-stat-value">0</span>
                 </div>
                 <div class="text-center mt-auto">
                     <span class="font-bold text-gray-300 text-sm">Materials</span>
@@ -471,6 +496,71 @@
             </button>
         </footer>
     </div>
+
+    <!-- Screen 6: Choice Graph -->
+    <div id="choice-screen" class="mobile-container hidden flex-col h-screen bg-gray-800 text-white">
+        <header class="h-32 bg-gray-900 shadow-lg flex-shrink-0 flex items-center justify-center">
+            <div class="font-anton text-6xl tracking-wider">JOURNEY</div>
+        </header>
+        <main class="flex-grow flex items-center justify-center p-4">
+            <svg id="choice-graph" class="w-full h-full" viewBox="0 0 400 500">
+                <!-- Paths -->
+                <!-- Layer 0 -> 1 -->
+                <line x1="200" y1="480" x2="100" y2="410" class="path-line"/>
+                <line x1="200" y1="480" x2="300" y2="410" class="path-line"/>
+                <!-- Layer 1 -> 2 -->
+                <line x1="100" y1="410" x2="50" y2="340" class="path-line"/>
+                <line x1="100" y1="410" x2="150" y2="340" class="path-line"/>
+                <line x1="300" y1="410" x2="250" y2="340" class="path-line"/>
+                <line x1="300" y1="410" x2="350" y2="340" class="path-line"/>
+                <!-- Layer 2 -> 3 -->
+                <line x1="50" y1="340" x2="50" y2="270" class="path-line"/>
+                <line x1="150" y1="340" x2="125" y2="270" class="path-line"/>
+                <line x1="150" y1="340" x2="175" y2="270" class="path-line"/>
+                <line x1="250" y1="340" x2="225" y2="270" class="path-line"/>
+                <line x1="250" y1="340" x2="275" y2="270" class="path-line"/>
+                <line x1="350" y1="340" x2="350" y2="270" class="path-line"/>
+                <!-- Layer 3 -> 4 -->
+                <line x1="50" y1="270" x2="90" y2="200" class="path-line"/>
+                <line x1="125" y1="270" x2="90" y2="200" class="path-line"/>
+                <line x1="175" y1="270" x2="200" y2="200" class="path-line"/>
+                <line x1="225" y1="270" x2="200" y2="200" class="path-line"/>
+                <line x1="275" y1="270" x2="310" y2="200" class="path-line"/>
+                <line x1="350" y1="270" x2="310" y2="200" class="path-line"/>
+                <!-- Layer 4 -> End -->
+                <line x1="90" y1="200" x2="150" y2="80" class="path-line"/>
+                <line x1="200" y1="200" x2="150" y2="80" class="path-line"/>
+                <line x1="200" y1="200" x2="250" y2="80" class="path-line"/>
+                <line x1="310" y1="200" x2="250" y2="80" class="path-line"/>
+
+                <!-- Nodes -->
+                <circle cx="200" cy="480" r="12" class="node start"/> <!-- Start -->
+                <!-- Tier 1 -->
+                <circle cx="100" cy="410" r="12" class="node"/>
+                <circle cx="300" cy="410" r="12" class="node"/>
+                <!-- Tier 2 -->
+                <circle cx="50" cy="340" r="12" class="node"/>
+                <circle cx="150" cy="340" r="12" class="node"/>
+                <circle cx="250" cy="340" r="12" class="node"/>
+                <circle cx="350" cy="340" r="12" class="node"/>
+                <!-- Tier 3 -->
+                <circle cx="50" cy="270" r="12" class="node"/>
+                <circle cx="125" cy="270" r="12" class="node"/>
+                <circle cx="175" cy="270" r="12" class="node"/>
+                <circle cx="225" cy="270" r="12" class="node"/>
+                <circle cx="275" cy="270" r="12" class="node"/>
+                <circle cx="350" cy="270" r="12" class="node"/>
+                <!-- Tier 4 -->
+                <circle cx="90" cy="200" r="12" class="node"/>
+                <circle cx="200" cy="200" r="12" class="node"/>
+                <circle cx="310" cy="200" r="12" class="node"/>
+                <!-- End -->
+                <circle cx="150" cy="80" r="12" class="node end"/>
+                <circle cx="250" cy="80" r="12" class="node end"/>
+            </svg>
+        </main>
+    </div>
+
 
     <!-- Generic Equipment Selection Modal -->
     <div id="equipment-modal" class="hidden fixed inset-0 bg-black bg-opacity-75 z-50 flex items-center justify-center p-4">
@@ -492,6 +582,7 @@
             const gambleScreen = document.getElementById('gamble-screen');
             const resultsScreen = document.getElementById('results-screen');
             const prepareScreen = document.getElementById('prepare-screen');
+            const choiceScreen = document.getElementById('choice-screen');
             
             // Market screen elements
             const fruitConveyor = document.getElementById('fruit-conveyor');
@@ -525,6 +616,9 @@
             const gambleSummaryContainer = document.getElementById('gamble-summary');
             const specialItemSummaryContainer = document.getElementById('special-item-summary');
             const nextButton = document.getElementById('next-button');
+
+            // Prepare screen elements
+            const beginButton = document.getElementById('begin-button');
 
             // Skip buttons
             const skipMarketButton = document.getElementById('skip-market-button');
@@ -745,6 +839,8 @@
                 if (equippedItems.weapon) currentStats.attack += 1;
                 if (equippedItems.armor === '🧥') currentStats.armor += 1;
                 if (equippedItems.ring === '💍') currentStats.grace += 1;
+                if (equippedItems.accessory === '👑') currentStats.fear -= 1;
+                if (equippedItems.accessory === '📿') currentStats.grace += 1;
 
                 // Update the DOM
                 document.getElementById('hp-stat-value').textContent = currentStats.hp;
@@ -782,6 +878,11 @@
                 const marketCounts = countItems(collectedMarketItems);
                 inventoryCounts = countItems(collectedKeepItems); // Store globally for this screen
                 
+                // Add chosen special item (Bread or Wine) to the food list
+                if (chosenSpecialItem) {
+                    marketCounts[chosenSpecialItem] = (marketCounts[chosenSpecialItem] || 0) + 1;
+                }
+
                 // Populate Food window with market items
                 foodContent.innerHTML = createItemHTML(marketCounts);
 
@@ -797,7 +898,7 @@
                 weapon: { emojis: ['🏹', '🗡️', '🦴', '🪈'], title: 'Choose a Weapon' },
                 armor: { emojis: ['🧥'], title: 'Choose Armor' },
                 ring: { emojis: ['💍'], title: 'Choose a Ring' },
-                accessory: { emojis: [], title: 'Choose an Accessory' }
+                accessory: { emojis: ['👑', '📿'], title: 'Choose an Accessory' }
             };
 
             /**
@@ -865,7 +966,7 @@
                 document.getElementById('weapon-slot').addEventListener('click', () => openEquipModal('weapon'));
                 document.getElementById('armor-slot').addEventListener('click', () => openEquipModal('armor'));
                 document.getElementById('ring-slot').addEventListener('click', () => openEquipModal('ring'));
-                // document.getElementById('accessory-slot').addEventListener('click', () => openEquipModal('accessory'));
+                document.getElementById('accessory-slot').addEventListener('click', () => openEquipModal('accessory'));
 
                 closeModalButton.addEventListener('click', () => {
                     modal.classList.add('hidden');
@@ -1603,6 +1704,12 @@
                 populatePrepareScreen();
             });
 
+            beginButton.addEventListener('click', () => {
+                prepareScreen.classList.add('hidden');
+                choiceScreen.classList.remove('hidden');
+                choiceScreen.classList.add('flex');
+            });
+
             // Add listeners for skip buttons
             skipMarketButton.addEventListener('click', endMarketPhase);
             skipScavengeButton.addEventListener('click', endScavengePhase);
@@ -1619,4 +1726,5 @@
 
 </body>
 </html>
+
 
